--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -92,27 +92,145 @@
 
         <li>
             <div class="uk-grid-small">
-                <div class="uk-card uk-card-body uk-card-secondary">
-                    <h3 class="uk-card-title">The Mill</h3>
-                    <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
-                        <div class="uk-width-5-6">
-                            <p>If you're in it for the caffeine.</p>
+                <p>If you haven't been to Lincoln before, then welcome! These were some of our favorite places to eat, drink, and hang out in the city where we first met.</p>
+
+                <div class="uk-grid">
+                    <div class="uk-width-1-2">
+                        <h2>Eat</h2>
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Ivanna Cone</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>They have lines out the door for a reason! Lots of great seasonal flavors.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="uk-width-1-6">
-                            <button class="uk-button uk-button-default recommendation-map-button" id="mill-map-button">Map</button>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Bison Witches</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Great lunch spot with... you guessed it... sandwiches! Also very addicting salsa con queso.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Hub Cafe</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Fantastic place for brunch! They serve farm-to-table style meals in a casual setting and are located right on the Antelope Valley Trail.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Honest Abe's Burgers &amp; Freedom</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Lots of wild and crazy burger choices, plus boozy (and virgin) milkshakes. This place was so consistently packed that 
+                                        they had to move from their spot 20 minutes from downtown to a 2-story building with triple capacity.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Grateful Bread</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>These folks have quite a hippie vibe and are open four days a week, for lunch only. But they make insane mac and cheese! The flavors rotate, 
+                                        but you can find their flavor of the day on their <a href="https://www.facebook.com/Grateful-BreadFreakbeat-Vegetarian-312793177888/">Facebook 
+                                            page</a>. They also have soup, sandwiches, and baked goods. But we were too busy eating the mac and cheese.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">The Oven</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Delicious Indian food, both downtown and in southeast Lincoln in an upscale setting. The downtown location also has a downstairs wine cellar.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Runza</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>If you haven't had a Runza yet, now's your chance! Enjoy the Nebraska classic at any of Lincoln's 14 convenient locations.</p>
+                                    <p>And yes, there's even <a href="www.reddit.com/r/unza">a subreddit </a> dedicated to them.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Misty's</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Misty's is a classic steakhouse in downtown, Havelock, and Williamsburg. They have a wide variety of dishes and make fantastic burgers. They 
+                                        also brew their own beer out of their downtown location.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="uk-width-1-2">
+                        <h2>Drink</h2>
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">The Mill</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Fantastic coffeehouse in downtown and College View.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Starlite Lounge</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Retro cocktail lounge with <em>very</em> strong martinis and free apps on Friday afternoons.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Barrymore's</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Classy bar at the back of a theater, famous for its Moscow Mules.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-card uk-card-body uk-card-secondary">
+                            <h3 class="uk-card-title">Zipline Beer Hall</h3>
+                            <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                                <div class="uk-width-5-6">
+                                    <p>Our favorite Lincoln brewery opened a brand-new beer hall and it's right by the wedding venue! This location offers a more relaxed location 
+                                        to enjoy their many handcrafted brews including several limited-edition and seasonal taps.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
+                <h2>Do</h2>
+                
+
                 <div class="uk-card uk-card-body uk-card-secondary">
-                    <h3 class="uk-card-title">The Railyard</h3>
+                    <h3 class="uk-card-title">Haymarket/The Railyard</h3>
                     <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
                         <div class="uk-width-5-6">
-                            <p class="uk-width-5-6">The Railyard is a newly-developed district in downtown Lincoln featuring shops, restaurants, and entertainment. 
-                                Check out the big screen, go ice skating, or grab a burger and a beer.</p>
+                            <p class="uk-width-5-6">The historic Haymarket district houses many iconic Lincoln businesses and is a great area to walk through, whether you are looking to 
+                                grab a quick snack, browse the book store, or read up on a bit of history. It has been extended to include the Railyard, a newly-developed district featuring shops,
+                                 restaurants, and entertainment. Check out the football score on the giant screen, go ice skating, or grab a burger and a beer.</p>
                         </div>
                         <div class="uk-width-1-6">
-                            <button class="uk-button uk-button-default recommendation-map-button" id="mill-map-button">Map</button>
+                            <button class="uk-button uk-button-default link-button">Site</button>
                         </div>
                     </div>
                 </div>
@@ -120,19 +238,47 @@
                 <div class="uk-card uk-card-body uk-card-secondary">
                     <h3 class="uk-card-title">Lincoln Children's Zoo</h3>
                     <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
-                            <div class="uk-width-5-6">
-                                <p>You don't need to be a child to enjoy this zoo. Despite its thorough Larry the Cable Guy endorsements, there are lots of great treasures here, 
-                                    from their headliner Amur leopard to a tribe of lemurs to giant tortoises. It is set amidst a very relaxing neighborhood in Lincoln and is next to 
-                                    Sunken Gardens.
-                                </p>
-                            </div>
-                            <div class="uk-width-1-6">
-                                <button class="uk-button uk-button-default recommendation-map-button" id="mill-map-button">Map</button>
-                            </div>
+                        <div class="uk-width-5-6">
+                            <p>Despite its name, this zoo is enjoyable for all ages.There are lots of great treasures here, from their headliner Amur leopard to a 
+                                tribe of lemurs to giant tortoises. It is set amidst a very relaxing neighborhood in Lincoln and is next to Sunken Gardens.
+                            </p>
                         </div>
+                        <div class="uk-width-1-6">
+                                <button class="uk-button uk-button-default link-button">Site</button>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-body uk-card-secondary">
+                    <h3 class="uk-card-title">International Quilt Museum</h3>
+                    <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                        <div class="uk-width-5-6">
+                            <p>Despite its name, this zoo is enjoyable for all ages.There are lots of great treasures here, from their headliner Amur leopard to a 
+                                tribe of lemurs to giant tortoises. It is set amidst a very relaxing neighborhood in Lincoln and is next to Sunken Gardens.
+                            </p>
+                        </div>
+                        <div class="uk-width-1-6">
+                                <button class="uk-button uk-button-default link-button">Site</button>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-body uk-card-secondary">
+                    <h3 class="uk-card-title">Trails</h3>
+                    <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                        <div class="uk-width-5-6">
+                            <p>Whether you are looking to stroll with your toddler, take a walk through nature, or get a few laps in, there are many lovely
+                                multi-recreational trails in the city:</p>
+                                <ul>
+                                    <li>Antelope Valley Trail: new trail running alongside a creek with lots of art installations and play equipment near downtown</li>
+                                    <li>Holmes Lake: large park with 2.5 mile loop around the lake, dog park, and playground</li>
+                                    <li>Pioneers Park: expansive park with 8 miles of trails, varying habitats, and art installations</li>
+                                </ul>
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </li>
 </ul>
 
