--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -102,7 +102,7 @@
                                     <p>They have lines out the door for a reason! Lots of great seasonal flavors.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="http://www.ivannacone.com/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="http://www.ivannacone.com/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                     <p>Great lunch spot with... you guessed it... sandwiches! Also very addicting salsa con queso.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://www.facebook.com/BisonWitchesLincoln/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://www.facebook.com/BisonWitchesLincoln/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                                     <p>Fantastic place for brunch! They serve farm-to-table style meals in a casual setting and are located right on the Antelope Valley Trail.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://www.hubcafelincoln.com/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://www.hubcafelincoln.com/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                     <p>Lots of wild and crazy burger choices, plus boozy (and virgin) milkshakes.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="http://grounduprestaurants.com/honest-abes-downtown/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="http://grounduprestaurants.com/honest-abes-downtown/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                                             page</a>. They also have soup, sandwiches, and baked goods. But we were too busy eating the mac and cheese.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://www.facebook.com/Grateful-BreadFreakbeat-Vegetarian-312793177888/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://www.facebook.com/Grateful-BreadFreakbeat-Vegetarian-312793177888/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                                     <p>Delicious Indian food, both downtown and in southeast Lincoln in an upscale setting. The downtown location also has a downstairs wine cellar.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://theoven-lincoln.com/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://theoven-lincoln.com/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -173,10 +173,10 @@
                             <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
                                 <div class="uk-width-5-6">
                                     <p>If you haven't had a Runza yet, now's your chance! Enjoy the Nebraska classic at any of Lincoln's 14 convenient locations.</p>
-                                    <p>And yes, there's even <a href="https://www.reddit.com/r/unza">a subreddit </a> dedicated to them.</p>
+                                    <p>And yes, there's even <a href="https://www.reddit.com/r/unza" target="_blank">a subreddit </a> dedicated to them.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://www.runza.com/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://www.runza.com/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                                     </p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://www.mistyslincoln.com/Home"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://www.mistyslincoln.com/Home" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                                     <p>Fantastic coffeehouse in downtown and College View.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="http://millcoffee.com/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="http://millcoffee.com/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                                     <p>Retro cocktail lounge with <em>very</em> strong martinis and free apps on Friday afternoons.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://www.buzzardbillys.com/lincoln/the-starlite-lounge/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://www.buzzardbillys.com/lincoln/the-starlite-lounge/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                     <p>Classy bar at the back of a theater, famous for its Moscow Mules.</p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="http://rococotheatre.com/barrymores/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="http://rococotheatre.com/barrymores/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                                     </p>
                                 </div>
                                 <div class="uk-width-1-6">
-                                    <a href="https://ziplinebrewing.com/locations/beer-hall/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                                    <a href="https://ziplinebrewing.com/locations/beer-hall/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +262,7 @@
                                  restaurants, and entertainment. Check out the football score on the giant screen, go ice skating, or grab a burger and a beer.</p>
                         </div>
                         <div class="uk-width-1-6">
-                            <a href="https://lincolnhaymarket.org/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                            <a href="https://lincolnhaymarket.org/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                         </div>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
                             </p>
                         </div>
                         <div class="uk-width-1-6">
-                            <a href="https://www.lincolnzoo.org/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                            <a href="https://www.lincolnzoo.org/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                             </p>
                         </div>
                         <div class="uk-width-1-6">
-                            <a href="https://www.quiltstudy.org/"><button class="uk-button uk-button-default link-button">Site</button></a>
+                            <a href="https://www.quiltstudy.org/" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
                         </div>
                     </div>
                 </div>
@@ -302,9 +302,9 @@
                             <p>Whether you are looking to stroll with your toddler, take a walk through nature, or get a few laps in, there are many lovely
                                 multi-recreational trails in the city:</p>
                             <ul>
-                                <li><a href="http://lincoln.ne.gov/city/pworks/projects/antelope/const/unionplz/">Antelope Valley Trail</a>: new trail running alongside a creek with lots of art installations and play equipment near downtown</li>
-                                <li><a href="https://www.recreation.gov/camping/gateways/303">Holmes Lake</a>: large park with 2.5 mile loop around the lake, dog park, and playground</li>
-                                <li><a href="http://lincoln.ne.gov/maps/parks/pioneers.htm">Pioneers Park</a>: expansive park with 8 miles of trails, varying habitats, and art installations</li>
+                                <li><a href="http://lincoln.ne.gov/city/pworks/projects/antelope/const/unionplz/" target="_blank">Antelope Valley Trail</a>: new trail running alongside a creek with lots of art installations and play equipment near downtown</li>
+                                <li><a href="https://www.recreation.gov/camping/gateways/303" target="_blank">Holmes Lake</a>: large park with 2.5 mile loop around the lake, dog park, and playground</li>
+                                <li><a href="http://lincoln.ne.gov/maps/parks/pioneers.htm" target="_blank">Pioneers Park</a>: expansive park with 8 miles of trails, varying habitats, and art installations</li>
                             </ul>
                         </div>
                     </div>
