--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -7,23 +7,97 @@
 
     <ul class="uk-switcher">
         <li>
-            <div class="uk-position-relative uk-visible-toggle uk-light" uk-slideshow="autoplay: true">
-                <ul class="uk-slideshow-items">
-                    <li>
-                        <img src="assets/img/gallery/1.jpg" alt="" uk-cover>
-                    </li>
-                    <li>
-                        <img src="assets/img/gallery/2.jpg" alt="" uk-cover>
-                    </li>
-                    <li>
-                        <img src="assets/img/gallery/3.jpg" alt="" uk-cover>
-                    </li>
-                </ul>
-
-                <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-                <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-
+            <div id="row-1"> 
+                <div class="sub-section">
+                    <div class="a-item gallery-img"><img src="assets/img/gallery/thumbs/A_1.jpg"></div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-row">
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_1.jpg"></div>
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_2.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_3.jpg"></div>
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_4.jpg"></div>
+                    </div>
+                </div>
+                
+                <div class="sub-section">
+                    <div class="sub-row">
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_1.jpg"></div>
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_2.jpg"></div>
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_3.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_4.jpg"></div>
+                        <div class="c-item gallery-img"><img src="assets/img/gallery/thumbs/C_1.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_5.jpg"></div>
+                        
+                    </div>
+                </div>
             </div>
+            <div id="row-2">
+                <div class="sub-section">
+                    <div class="sub-row">
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_5.jpg"></div>
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_6.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="e-item gallery-img"><img src="assets/img/gallery/thumbs/E_1.jpg"></div>
+                        <div class="e-item gallery-img"><img src="assets/img/gallery/thumbs/E_2.jpg"></div>
+                        <div class="e-item gallery-img"><img src="assets/img/gallery/thumbs/E_3.jpg"></div>
+                    </div>
+                </div>
+
+                <div class="sub-section">
+                    <div class="sub-row">
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_6.jpg"></div>
+                        <div class="c-item gallery-img"><img src="assets/img/gallery/thumbs/C_2.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_7.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_8.jpg"></div>
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_9.jpg"></div>
+                        <div class="d-item gallery-img"><img src="assets/img/gallery/thumbs/D_10.jpg"></div>
+                    </div>
+                </div>
+
+                <div class="sub-section">
+                    <div class="a-item gallery-img"><img src="assets/img/gallery/thumbs/A_2.jpg"></div>
+                </div>
+            </div>
+
+            <div id="row-3">
+                <div class="sub-section">
+                    <div class="sub-row">
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_7.jpg"></div>
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_8.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_9.jpg"></div>
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_10.jpg"></div>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="a-item gallery-img"><img src="assets/img/gallery/thumbs/A_3.jpg"></div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-row">
+                        <div class="e-item gallery-img"><img src="assets/img/gallery/thumbs/E_4.jpg"></div>
+                        <div class="e-item gallery-img"><img src="assets/img/gallery/thumbs/E_5.jpg"></div>
+                        <div class="e-item gallery-img"><img src="assets/img/gallery/thumbs/E_6.jpg"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_11.jpg"></div>
+                        <div class="b-item gallery-img"><img src="assets/img/gallery/thumbs/B_12.jpg"></div>
+                    </div>
+                </div>
+            </div>
+
         </li>
         <li>
             <form action="/uploadImage" class="dropzone" id="myDropzone" enctype="multipart/form-data">
