More mobile fixes

--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -24,3 +24,8 @@
 .c-item {
     float: right;
 }
+@media only screen and (max-width: 600px) {
+    .site-section {
+        padding-left: 5px;
+    }
+}
