--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -52,7 +52,7 @@
 
         <li>
             <div uk-grid class="uk-grid-match">
-                <div class="uk-width-1-2">
+                <div class="uk-width-1-2@m">
                     <div class="uk-card uk-card-body uk-card-secondary">
                         <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-2">
+                <div class="uk-width-1-2@m">
                     <div class="uk-card uk-card-body uk-card-secondary">
                         <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
@@ -93,7 +93,7 @@
                 <p>If you haven't been to Lincoln before, then welcome! These were some of our favorite places to eat, drink, and hang out in the city where we first met.</p>
 
                 <div class="uk-grid">
-                    <div class="uk-width-1-2">
+                    <div class="uk-width-1-2@m">
                         <h2>Eat</h2>
                         <div class="uk-card uk-card-body uk-card-secondary">
                             <h3 class="uk-card-title">Ivanna Cone</h3>
@@ -196,7 +196,7 @@
                         </div>
                     </div>
 
-                    <div class="uk-width-1-2">
+                    <div class="uk-width-1-2@m">
                         <h2>Drink</h2>
                         <div class="uk-card uk-card-body uk-card-secondary">
                             <h3 class="uk-card-title">The Mill</h3>
