--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,3 +1,8 @@
 .uk-navbar-container#nav {
     background: rgb(52,52,52,.5);
 }
+@media only screen and (max-width: 600px) {
+    .uk-navbar-nav a {
+        font-size: .8rem;
+    }
+}
