--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -10,6 +10,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+.site-section {
+    padding: 10px;
+}
 
 #send span, #lookup-button span {
     margin-left: 10px;
