--- a/src/app/schedule/schedule.component.css
+++ b/src/app/schedule/schedule.component.css
@@ -65,3 +65,11 @@
 .link-button {
     margin-bottom: 10px;
 }
+.site-section {
+    padding: 10px;
+}
+@media only screen and (max-width: 600px) {
+    .link-button {
+        padding: 5px 15px;
+    }
+}
