--- a/src/app/wedding/wedding.component.css
+++ b/src/app/wedding/wedding.component.css
@@ -84,6 +84,11 @@ body {
     display: inline-block;
     padding: 0 20px;
 }
+@media only screen and (max-width: 600px) {
+    #contact-buttons div {
+        padding: 0 10px;
+    }
+}
 #contact-buttons img {
     height: 20px;
 }
@@ -103,4 +108,7 @@ body {
 }
 #bug-icon {
     height: 24px;
+}
+.site-section {
+    padding: 10px;
 }
