--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -1,3 +1,10 @@
+/* POSSIBLY TEMPORARY CSS
+*/
+#rsvp-section {
+    margin-top: -100px;
+    margin-bottom: -140px;
+}
+
 .uk-select option {
     background-color: rgb(61,61,61);
 }
